# devops-interview-prep

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
data/questions/: interview_questions.json
devops_ip/: __init__.py  cli.py
questions/: interview_questions.json
src/devops_interview_prep/: __init__.py  __main__.py  cli.py  cli_backup.py
src/devops_interview_prep/commands/: __init__.py  analytics.py  info.py  interview.py  practice.py  review.py
src/devops_interview_prep/core/: __init__.py  config.py  progress_tracker.py  question_bank.py
src/devops_interview_prep/models/: __init__.py  question.py  session.py
src/devops_interview_prep/utils/: __init__.py  formatting.py
tests/: conftest.py
tests/fixtures/: sample_questions.json
